--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 mongo_url = mongodb+srv://lavreniukkk:daedraprince@cluster0.eo5xcgp.mongodb.net/marketplace?retryWrites=true&w=majority
 jwt_secret = marketplacetoken
+cloud_name = dg4vepwuw
+cloud_api_key = 841227935364514
+cloud_api_secret = MprODlDoBh4zQDCi_bQ-y-19qXg
